--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".imageView.ImageViewActivity20"></activity>
+        <activity android:name=".EditText.EditTextActivity20"></activity>
+        <activity android:name=".EditText.EditTextActivity19" />
+        <activity android:name=".EditText.EditTextActivity18" />
+        <activity android:name=".EditText.EditTextActivity17" />
+        <activity android:name=".EditText.EditTextActivity16" />
+        <activity android:name=".EditText.EditTextActivity15" />
+        <activity android:name=".EditText.EditTextActivity14" />
+        <activity android:name=".EditText.EditTextActivity13" />
+        <activity android:name=".EditText.EditTextActivity12" />
+        <activity android:name=".EditText.EditTextActivity11" />
+        <activity android:name=".EditText.EditTextActivity10" />
+        <activity android:name=".EditText.EditTextActivity9" />
+        <activity android:name=".EditText.EditTextActivity8" />
+        <activity android:name=".EditText.EditTextActivity7" />
+        <activity android:name=".EditText.EditTextActivity6" />
+        <activity android:name=".EditText.EditTextActivity5" />
+        <activity android:name=".EditText.EditTextActivity4" />
+        <activity android:name=".EditText.EditTextActivity3" />
+        <activity android:name=".EditText.EditTextActivity2" />
+        <activity android:name=".EditText.EditTextActivity1" />
+        <activity android:name=".imageView.ImageViewActivity20" />
         <activity android:name=".imageView.ImageViewActivity19" />
         <activity android:name=".imageView.ImageViewActivity18" />
         <activity android:name=".imageView.ImageViewActivity17" />
