TextView And RadioButton

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditText.EditTextActivity20"></activity>
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity20"></activity>
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity19" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity18" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity17" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity16" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity15" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity14" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity13" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity12" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity11" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity10" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity9" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity8" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity7" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity6" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity5" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity4" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity3" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity2" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity1" />
+        <activity android:name=".EditText.EditTextActivity20" />
         <activity android:name=".EditText.EditTextActivity19" />
         <activity android:name=".EditText.EditTextActivity18" />
         <activity android:name=".EditText.EditTextActivity17" />
