--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity20"></activity>
+        <activity android:name=".CheckBox.CheckBoxActivity20"></activity>
+        <activity android:name=".CheckBox.CheckBoxActivity19" />
+        <activity android:name=".CheckBox.CheckBoxActivity18" />
+        <activity android:name=".CheckBox.CheckBoxActivity17" />
+        <activity android:name=".CheckBox.CheckBoxActivity16" />
+        <activity android:name=".CheckBox.CheckBoxActivity15" />
+        <activity android:name=".CheckBox.CheckBoxActivity14" />
+        <activity android:name=".CheckBox.CheckBoxActivity13" />
+        <activity android:name=".CheckBox.CheckBoxActivity12" />
+        <activity android:name=".CheckBox.CheckBoxActivity11" />
+        <activity android:name=".CheckBox.CheckBoxActivity10" />
+        <activity android:name=".CheckBox.CheckBoxActivity9" />
+        <activity android:name=".CheckBox.CheckBoxActivity8" />
+        <activity android:name=".CheckBox.CheckBoxActivity7" />
+        <activity android:name=".CheckBox.CheckBoxActivity6" />
+        <activity android:name=".CheckBox.CheckBoxActivity5" />
+        <activity android:name=".CheckBox.CheckBoxActivity4" />
+        <activity android:name=".CheckBox.CheckBoxActivity3" />
+        <activity android:name=".CheckBox.CheckBoxActivity2" />
+        <activity android:name=".CheckBox.CheckBoxActivity1" />
+        <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity20" />
         <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity19" />
         <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity18" />
         <activity android:name=".TextViewAndRadioButton.TextViewAndRadioButtonActivity17" />
