--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CheckBox.CheckBoxActivity20"></activity>
+        <activity android:name=".spinner.SpinnerActivity19"></activity>
+        <activity android:name=".spinner.SpinnerActivity20" />
+        <activity android:name=".spinner.SpinnerActivity18" />
+        <activity android:name=".spinner.SpinnerActivity17" />
+        <activity android:name=".spinner.SpinnerActivity16" />
+        <activity android:name=".spinner.SpinnerActivity15" />
+        <activity android:name=".spinner.SpinnerActivity14" />
+        <activity android:name=".spinner.SpinnerActivity13" />
+        <activity android:name=".spinner.SpinnerActivity12" />
+        <activity android:name=".spinner.SpinnerActivity11" />
+        <activity android:name=".spinner.SpinnerActivity10" />
+        <activity android:name=".spinner.SpinnerActivity9" />
+        <activity android:name=".spinner.SpinnerActivity8" />
+        <activity android:name=".spinner.SpinnerActivity7" />
+        <activity android:name=".spinner.SpinnerActivity6" />
+        <activity android:name=".spinner.SpinnerActivity5" />
+        <activity android:name=".spinner.SpinnerActivity4" />
+        <activity android:name=".spinner.SpinnerActivity3" />
+        <activity android:name=".spinner.SpinnerActivity2" />
+        <activity android:name=".spinner.SpinnerActivity1" />
+        <activity android:name=".CheckBox.CheckBoxActivity20" />
         <activity android:name=".CheckBox.CheckBoxActivity19" />
         <activity android:name=".CheckBox.CheckBoxActivity18" />
         <activity android:name=".CheckBox.CheckBoxActivity17" />
