--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".spinner.SpinnerActivity19"></activity>
+        <activity android:name=".recyclerView.RecyclerViewActivity20"></activity>
+        <activity android:name=".recyclerView.RecyclerViewActivity19" />
+        <activity android:name=".recyclerView.RecyclerViewActivity18" />
+        <activity android:name=".recyclerView.RecyclerViewActivity17" />
+        <activity android:name=".recyclerView.RecyclerViewActivity16" />
+        <activity android:name=".recyclerView.RecyclerViewActivity15" />
+        <activity android:name=".recyclerView.RecyclerViewActivity14" />
+        <activity android:name=".recyclerView.RecyclerViewActivity13" />
+        <activity android:name=".recyclerView.RecyclerViewActivity12" />
+        <activity android:name=".recyclerView.RecyclerViewActivity11" />
+        <activity android:name=".recyclerView.RecyclerViewActivity10" />
+        <activity android:name=".recyclerView.RecyclerViewActivity9" />
+        <activity android:name=".recyclerView.RecyclerViewActivity8" />
+        <activity android:name=".recyclerView.RecyclerViewActivity7" />
+        <activity android:name=".recyclerView.RecyclerViewActivity6" />
+        <activity android:name=".recyclerView.RecyclerViewActivity5" />
+        <activity android:name=".recyclerView.RecyclerViewActivity4" />
+        <activity android:name=".recyclerView.RecyclerViewActivity3" />
+        <activity android:name=".recyclerView.RecyclerViewActivity2" />
+        <activity android:name=".recyclerView.RecyclerViewActivity1" />
+        <activity android:name=".spinner.SpinnerActivity19" />
         <activity android:name=".spinner.SpinnerActivity20" />
         <activity android:name=".spinner.SpinnerActivity18" />
         <activity android:name=".spinner.SpinnerActivity17" />
