--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Tab.TabActivity2"></activity>
+        <activity android:name=".Tab.TabActivity3"></activity>
+        <activity android:name=".Tab.TabActivity2" />
         <activity android:name=".Tab.TabActivity1" />
         <activity android:name=".recyclerView.RecyclerViewActivity20" />
         <activity android:name=".recyclerView.RecyclerViewActivity19" />
