--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Tab.TabActivity7"></activity>
+        <activity android:name=".Tab.TabActivity8"></activity>
+        <activity android:name=".Tab.TabActivity7" />
         <activity android:name=".Tab.TabActivity6" />
         <activity android:name=".Tab.TabActivity5" />
         <activity android:name=".Tab.TabActivity4" />
