--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Tab.TabActivity16"></activity>
+        <activity android:name=".Tab.TabHostActivity"></activity>
+        <activity android:name=".Tab.TabActivity17" />
+        <activity android:name=".Tab.TabActivity16" />
         <activity android:name=".Tab.TabActivity15" />
         <activity android:name=".Tab.TabActivity14" />
         <activity android:name=".Tab.TabActivity13" />
