--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewPager.ViewPagerActivity1"></activity>
+        <activity android:name=".ViewPager.ViewPagerActivity2"></activity>
+        <activity android:name=".ViewPager.ViewPagerActivity1" />
         <activity android:name=".Tab.TabActivity18" />
         <activity android:name=".Tab.TabHostActivity" />
         <activity android:name=".Tab.TabActivity17" />
