--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewPager.ViewPagerActivity7"></activity>
+        <activity android:name=".ViewPager.ViewPagerActivity8"></activity>
+        <activity android:name=".ViewPager.ViewPagerActivity7" />
         <activity android:name=".ViewPager.ViewPagerActivity6" />
         <activity android:name=".ViewPager.ViewPagerActivity5" />
         <activity android:name=".ViewPager.ViewPagerActivity4" />
