--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewPager.ViewPagerActivity14"></activity>
+        <activity android:name=".ViewPager.ViewPagerActivity15"></activity>
+        <activity android:name=".ViewPager.ViewPagerActivity14" />
         <activity android:name=".ViewPager.ViewPagerActivity13" />
         <activity android:name=".ViewPager.ViewPagerActivity12" />
         <activity android:name=".ViewPager.ViewPagerActivity11" />
