add change background on NavigationActivity2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Navigation.NavigationActivity2"></activity>
         <activity
             android:name=".Navigation.NavigationActivity1"
             android:theme="@style/ToolBarTheme.NoActionBar" />
