--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Navigation.NavigationActivity5"></activity>
+        <activity
+            android:name=".Navigation.NavigationActivity6"
+            android:label="@string/title_activity_navigation6"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Navigation.NavigationActivity5" />
         <activity android:name=".Navigation.NavigationActivity4" />
         <activity android:name=".Navigation.NavigationActivity3" />
         <activity android:name=".Navigation.NavigationActivity2" />
