--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Navigation.NavigationActivity6"
-            android:label="@string/title_activity_navigation6"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".Navigation.NavigationActivity5" />
-        <activity android:name=".Navigation.NavigationActivity4" />
-        <activity android:name=".Navigation.NavigationActivity3" />
-        <activity android:name=".Navigation.NavigationActivity2" />
+            android:name=".Navigation.NavigationActivity6"/>
+        <activity
+            android:name=".Navigation.NavigationActivity5"
+            android:theme="@style/ToolBarTheme.NoActionBar"/>
+        <activity
+            android:name=".Navigation.NavigationActivity4"
+            android:theme="@style/ToolBarTheme.NoActionBar"/>
+        <activity
+            android:name=".Navigation.NavigationActivity3"
+            android:theme="@style/ToolBarTheme.NoActionBar"/>
+        <activity
+            android:name=".Navigation.NavigationActivity2"
+            android:theme="@style/ToolBarTheme.NoActionBar"/>
         <activity
             android:name=".Navigation.NavigationActivity1"
             android:theme="@style/ToolBarTheme.NoActionBar" />
