--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Navigation.NavActivity8"></activity>
+        <activity android:name=".Navigation.NavigationActivity8" />
         <activity
             android:name=".Navigation.NavigationActivity7"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Navigation.NavigationActivity6" />
         <activity
             android:name=".Navigation.NavigationActivity5"
