--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Navigation.NavigationActivity13"></activity>
+        <activity
+            android:name=".Navigation.NavigationActivity14"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Navigation.NavigationActivity13" />
         <activity android:name=".Navigation.NavigationActivity12" />
-        <activity android:name=".Navigation.NavigationActivity11" />
+        <activity
+            android:name=".Navigation.NavigationActivity11"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Navigation.NavigationActivity10" />
         <activity android:name=".Navigation.NavigationActivity9" />
         <activity android:name=".Navigation.NavActivity8" />
