--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Navigation.NavigationActivity17"></activity>
+        <activity android:name=".Navigation.NavigationActivity18"></activity>
+        <activity android:name=".Navigation.NavigationActivity17" />
         <activity android:name=".Navigation.NavigationActivity16" />
         <activity android:name=".Navigation.NavigationActivity15" />
         <activity
